--- a/views/payment/payment.css
+++ b/views/payment/payment.css
@@ -15,7 +15,12 @@
   .hidden {
     display: none;
   }
-  
+  .contenedor_facturacion{
+    display: block;
+    padding: 200px;
+    margin: 200px;
+    background-color: #059936;
+  }
   #payment-message {
     color: rgb(105, 115, 134);
     font-size: 16px;
